syntax = "proto3";
package signaling;

message Message {
  oneof type {
    bool heartbeat = 1; // Incoming and outcoming message
    Content content = 2; // Incoming and outcoming message
    GroupData connect = 3; // Outcoming message
    bool connected = 4; // Incoming message
  }
}

message Content {
  uint32 id = 1;
  bool lastData = 2; // Forward last data and unsubscribe from the peer
  bytes data = 3;
}

message GroupData {
  uint32 id = 1;
  repeated uint32 members = 2;
}
